first steps towards a better use of generic types in Wrapping. Some code simplifications.